try comleted hw5_bonus